deploy: ba8ba7fc2f86dacdc02dd76e601fb18161ee2087

--- a/genindex.html
+++ b/genindex.html
@@ -196,19 +196,29 @@
           
 <section class="genindex-section">
   <h1 id="index">Index</h1>
-  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#I"><strong>I</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a></div>
+  <div class="genindex-jumpbox"><a href="#A"><strong>A</strong></a> | <a href="#B"><strong>B</strong></a> | <a href="#G"><strong>G</strong></a> | <a href="#M"><strong>M</strong></a> | <a href="#P"><strong>P</strong></a> | <a href="#S"><strong>S</strong></a> | <a href="#T"><strong>T</strong></a> | <a href="#U"><strong>U</strong></a></div>
 </section>
 <section id="A" class="genindex-section">
   <h2>A</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li>
-    aws_iot_core_credential_provider_session_helper
+    awsiot_credentialhelper.boto3_session
 
         <ul>
-          <li><a href="reference.html#module-aws_iot_core_credential_provider_session_helper">module</a>
+          <li><a href="reference.html#module-awsiot_credentialhelper.boto3_session">module</a>
 </li>
         </ul></li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="B" class="genindex-section">
+  <h2>B</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Boto3SessionProvider">Boto3SessionProvider (class in awsiot_credentialhelper.boto3_session)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
@@ -217,21 +227,7 @@
   <h2>G</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#aws_iot_core_credential_provider_session_helper.IotCoreCredentialProviderSession.get_session">get_session() (aws_iot_core_credential_provider_session_helper.IotCoreCredentialProviderSession method)</a>
-</li>
-    </ul></td>
-  </tr></table>
-</section>
-
-<section id="I" class="genindex-section">
-  <h2>I</h2>
-  <table style="width: 100%" class="indextable genindextable"><tr>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#aws_iot_core_credential_provider_session_helper.IAMBotocoreCredentials">IAMBotocoreCredentials (class in aws_iot_core_credential_provider_session_helper)</a>
-</li>
-    </ul></td>
-    <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#aws_iot_core_credential_provider_session_helper.IotCoreCredentialProviderSession">IotCoreCredentialProviderSession (class in aws_iot_core_credential_provider_session_helper)</a>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Boto3SessionProvider.get_session">get_session() (awsiot_credentialhelper.boto3_session.Boto3SessionProvider method)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -245,7 +241,7 @@
     module
 
         <ul>
-          <li><a href="reference.html#module-aws_iot_core_credential_provider_session_helper">aws_iot_core_credential_provider_session_helper</a>
+          <li><a href="reference.html#module-awsiot_credentialhelper.boto3_session">awsiot_credentialhelper.boto3_session</a>
 </li>
         </ul></li>
     </ul></td>
@@ -256,7 +252,43 @@
   <h2>P</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#aws_iot_core_credential_provider_session_helper.Pkcs11Config">Pkcs11Config (class in aws_iot_core_credential_provider_session_helper)</a>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.pkcs11_lib">pkcs11_lib (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+</li>
+    </ul></td>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config">Pkcs11Config (class in awsiot_credentialhelper.boto3_session)</a>
+</li>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.private_key_label">private_key_label (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="S" class="genindex-section">
+  <h2>S</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.slot_id">slot_id (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="T" class="genindex-section">
+  <h2>T</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.token_label">token_label (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+</li>
+    </ul></td>
+  </tr></table>
+</section>
+
+<section id="U" class="genindex-section">
+  <h2>U</h2>
+  <table style="width: 100%" class="indextable genindextable"><tr>
+    <td style="width: 33%; vertical-align: top;"><ul>
+        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.user_pin">user_pin (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
 </li>
     </ul></td>
   </tr></table>
