deploy: 6ca7344b6c8be47544a75712e3bccf77f48e3db4

--- a/reference.html
+++ b/reference.html
@@ -265,6 +265,9 @@ AWS region for the returned sessions object. Any set of <a class="reference exte
 <dt class="field-even">Returns<span class="colon">:</span></dt>
 <dd class="field-even"><p>Boto3 session object tied to IoT Credential Provider for obtaining credentials.</p>
 </dd>
+<dt class="field-odd">Return type<span class="colon">:</span></dt>
+<dd class="field-odd"><p>Session</p>
+</dd>
 </dl>
 </dd></dl>
 
