deploy: 7fb07ec12f0c92b7dbfb088413d76a21df855862

--- a/genindex.html
+++ b/genindex.html
@@ -203,10 +203,10 @@
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
         <li>
-    awsiot_credentialhelper.boto3_session
+    awsiot_credential_helper.boto3_session
 
         <ul>
-          <li><a href="reference.html#module-awsiot_credentialhelper.boto3_session">module</a>
+          <li><a href="reference.html#module-awsiot_credential_helper.boto3_session">module</a>
 </li>
         </ul></li>
     </ul></td>
@@ -217,7 +217,7 @@
   <h2>B</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Boto3SessionProvider">Boto3SessionProvider (class in awsiot_credentialhelper.boto3_session)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Boto3SessionProvider">Boto3SessionProvider (class in awsiot_credential_helper.boto3_session)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -227,7 +227,7 @@
   <h2>G</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Boto3SessionProvider.get_session">get_session() (awsiot_credentialhelper.boto3_session.Boto3SessionProvider method)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Boto3SessionProvider.get_session">get_session() (awsiot_credential_helper.boto3_session.Boto3SessionProvider method)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -241,7 +241,7 @@
     module
 
         <ul>
-          <li><a href="reference.html#module-awsiot_credentialhelper.boto3_session">awsiot_credentialhelper.boto3_session</a>
+          <li><a href="reference.html#module-awsiot_credential_helper.boto3_session">awsiot_credential_helper.boto3_session</a>
 </li>
         </ul></li>
     </ul></td>
@@ -252,13 +252,13 @@
   <h2>P</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.pkcs11_lib">pkcs11_lib (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Pkcs11Config.pkcs11_lib">pkcs11_lib (awsiot_credential_helper.boto3_session.Pkcs11Config attribute)</a>
 </li>
     </ul></td>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config">Pkcs11Config (class in awsiot_credentialhelper.boto3_session)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Pkcs11Config">Pkcs11Config (class in awsiot_credential_helper.boto3_session)</a>
 </li>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.private_key_label">private_key_label (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Pkcs11Config.private_key_label">private_key_label (awsiot_credential_helper.boto3_session.Pkcs11Config attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -268,7 +268,7 @@
   <h2>S</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.slot_id">slot_id (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Pkcs11Config.slot_id">slot_id (awsiot_credential_helper.boto3_session.Pkcs11Config attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -278,7 +278,7 @@
   <h2>T</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.token_label">token_label (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Pkcs11Config.token_label">token_label (awsiot_credential_helper.boto3_session.Pkcs11Config attribute)</a>
 </li>
     </ul></td>
   </tr></table>
@@ -288,7 +288,7 @@
   <h2>U</h2>
   <table style="width: 100%" class="indextable genindextable"><tr>
     <td style="width: 33%; vertical-align: top;"><ul>
-        <li><a href="reference.html#awsiot_credentialhelper.boto3_session.Pkcs11Config.user_pin">user_pin (awsiot_credentialhelper.boto3_session.Pkcs11Config attribute)</a>
+        <li><a href="reference.html#awsiot_credential_helper.boto3_session.Pkcs11Config.user_pin">user_pin (awsiot_credential_helper.boto3_session.Pkcs11Config attribute)</a>
 </li>
     </ul></td>
   </tr></table>
